[package]
name = "scoretracker-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
directories = "6.0.0"
md5 = "0.8.0"
notify = "8.2.0"
serde = { version = "1.0.226", features = ["derive"] }
serde-jsonlines = "0.7.0"
serde_json = "1.0.145"
sha256 = "1.6.0"
typetag = "0.2.20"
uuid = { version = "1.18.1", features = ["v4"] }
walkdir = "2.5.0"
